# vapor_archive

./: Cargo.toml  LICENSE.md  README.md  SPEC.md
src/: lib.rs
src/read/: archive.rs  comp_reader.rs  file.rs  file_info.rs  mod.rs
src/shared/: archive_header.rs  compression.rs  directory.rs  encryption.rs  error.rs  file_header.rs  file_info.rs  file_metadata.rs  mod.rs
src/write/: comp_writer.rs  file.rs  hash_writer.rs  mod.rs  sink.rs  writer.rs
tests/: read.rs  write.rs
