[package]
name = "vapor_archive"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"
description = "An archive container format"
repository = "https://github.com/wrckn/vapor_archive"
homepage = "https://github.com/wrckn/vapor_archive"
license-file = "LICENSE.md"
readme = "README.md"

exclude = [
    ".vscode",
    ".gitignore",
    "tests/out/*.bmp",
    "tests/out/*.md",
    "tests/out/*.csv",
    "tests/out/*.var"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for de-/serializing internal file structures
serde = { version = "1.0.110", features = [ "derive" ] }
bincode = "1.2.1"
# Used for compression
zstd = "0.5.2"
# Used for checksums
blake2 = "0.8.1"

# Used for handling dates
[dependencies.chrono]
version = "0.4.11"
features = [ "serde" ]